data/derived/sp14/progs/unify/prog3442.ml.out
Characters 109-110:
  | Sine s -> "sin(pi*" ^ Format.printf "%f" s  ^ ")";;
                                             ^
Error: This expression has type expr but an expression was expected of type
         float
